Fixed misaligned handles

--- a/site/ts/elements/navbar/navitem.css
+++ b/site/ts/elements/navbar/navitem.css
@@ -29,6 +29,7 @@
 
     display: block;
 
+    width: min-content;
     height: var(--full-size);
 
     padding: var(--padding);
